# Walker-robot

./: CMakeLists.txt  package.xml  readme.md
launch/: cleaner.launch.py
results/: cppcheck.txt  cpplint.txt
results/my_bag/: metadata.yaml  my_bag_0.db3
src/: walker_node.cpp
